Fix footer alignment

--- a/stylesheets/aboutstyles.css
+++ b/stylesheets/aboutstyles.css
@@ -294,7 +294,6 @@ footer {
 
 .footerLogo {
   width: 95%;
-  align-items: center;
   display: flex;
   align-items: start;
   box-sizing: border-box;
